--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,16 @@
         <artifactId>google-api-services-youtube</artifactId>
         <version>v3-rev189-1.23.0</version>
     </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20171018</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
