Tried to get test coverage working with sonar-qube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,11 @@ sonar.projectVersion=1.0
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
 sonar.sources=src/main/
-sonar.java.binaries=out/production/
+sonar.tests=src/test/
+sonar.java.test.libraries=./target/test-classes
+sonar.java.test.binaries=./target/test-classes
+sonar.java.libraries=./target/classes
+sonar.java.binaries=./target/classes
+sonar.junit.reportPaths=./target/surefire-reports
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
