Updated with RMI properties

--- a/db.properties
+++ b/db.properties
@@ -1,6 +1,13 @@
+#DATABASE
 dbUrl=jdbc:mysql://localhost:3306
 dbTable=tubefly
 reconnect=true
 ssl=false
 dbUser=root
 dbPass=root
+
+#RMI
+registryip=localhost
+servername=tubeserver
+publishername=tubepublisher
+rmiport=1099
